<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_calc"
            android:icon="@drawable/ic_calc"
            android:title="@string/nav_item_calc" />
        <item
            android:id="@+id/nav_notices"
            android:icon="@drawable/ic_notices"
            android:title="@string/nav_item_notices" />
        <item
            android:icon="@drawable/ic_aboutme"
            android:title="@string/nav_item_aboutme" />
    </group>

    <item android:title="@string/nav_group_communication">
        <menu>
            <item
                android:icon="@drawable/ic_menu_share"
                android:title="@string/nav_item_share" />
        </menu>
    </item>
</menu>
